src/semantic/common.scss
@import "variable.scss";

*{
    box-sizing: border-box;
}
body {
    font-size: $base-font !important;
    padding: 70px 0 0;
}

a {
    color: $blue;
    text-decoration: none;
}

.top-header {
    height: 70px;
    padding: 0 30px;
    margin-bottom: 0;
    position: fixed;
    background-color: $darkGrey;
    width: 100%;
    display: flex;
    top: 0;
    justify-content: space-between;
    align-items: center;
    z-index: 99;
}
.main-header {
    height: 70px;
    padding: 0 30px;
    margin-bottom: 0;
    position: fixed;
    background-color: $whiteColor;
    width: 100%;
    display: flex;
    top: 0;
    justify-content: space-between;
    align-items: center;
    z-index: 1;
}
.ui.dropdown{
    color: #FFFFFF;
    .menu.visible {
        display: block;
    }
} 

.logo-wrap {
  color: $whiteColor;
  font-size: 40px;
  display: flex;
  width: 200px;
  height: 100%;
  align-items: center;
}

.logo {
    color: $darkGrey;
    font-size: 40px;
    display: flex;
    width: 200px;
    height: 100%;
    align-items: center;
  }

.sign-up-container {
    position: relative;    
    background-color: #fff;
    padding: 5px;
    padding-top: 50px;
    padding-bottom: 50px;
    margin-bottom: 30px;
    border-radius: 5px;
    -webkit-box-shadow: 0 10px 27px 0 hsla(215,9%,64%,.18);
    box-shadow: 0 10px 27px 0 hsla(215,9%,64%,.18);
    padding: 35px;
    float: none;
    width: 100%;
    margin:0 auto;
    box-sizing: border-box;    
    top: -40px;    
    max-width: 700px;
}

input {
    height: 48px;
    border: 1px solid #e7eaf0;
    border-top-color: rgb(231, 234, 240);
    border-right-color: rgb(231, 234, 240);
    border-bottom-color: rgb(231, 234, 240);
    border-left-color: rgb(231, 234, 240);
    width: 100%;
    font-size: 15px;
    padding: 0 16px;
    -webkit-box-shadow: none;
    box-shadow: none;
    border-radius: 3px;
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
    color: #555;
    margin:0;
    box-sizing: border-box;
}

button.signup-btn, 
button.signup-btn:focus, 
button.signup-btn:hover {
    background-color: #3ecf8e;
    font-size: 16px;
    padding: 15px 35px !important;
    outline: 0;
    border-radius: 70px !important;
    border: 0;
    color: #FFF;
    cursor: pointer;
 }

 .error {
     color: #FF0000;
     font-size: 14px;
     margin: 5px 0 0 ;
 }
 .signup-form label {
     font-size: 14px;     
     display: block;
 }
 .input-field-block {
    margin: 15px 0 5px;
    font-size: 14px;
 }
 .input-field-block input {
    margin:0;    
 }
.input-field-block button.signup-btn {
    margin: 0;
}
.error-border {
    border: 1px solid #FF0000;
}
.sign-up-container h1 {
    margin: 0;
}
.sign-up-container h3 {
    color: #287ac7;
    font-size: 17px;
    text-transform: uppercase;
    margin-bottom: 20px;
    font-weight: 600;
    letter-spacing: 1px;
    margin: 20px 0 0;
}
div.label {
    margin: 5px 0;
}
.bg-green {
    background-color: #43c391;
}
.sign-up-page-title {
    padding-top: 35px;
    padding-bottom: 55px;
    margin: 70px 0 0;
    color: #fff;
}
.sign-up-page-title h1{
    font-size: 38px;
    line-height: 1.3;
    font-weight: 400;
    margin:0;
    text-align: center;
}
.login-page {
    height: 100vh;
    background: #f7f7f7 !important;
}

.login-section{
    height: 100vh;   
}

.login-section .full-height{
    height: 100%;  
}

.login{
    position: relative;    
    background-color: #fff;
    padding: 5px;
    padding-top: 50px;
    padding-bottom: 50px;
    margin-bottom: 30px;
    border-radius: 5px;
    -webkit-box-shadow: 0 10px 27px 0 hsla(215,9%,64%,.18);
    box-shadow: 0 10px 27px 0 hsla(215,9%,64%,.18);
    padding: 35px;
    float: left;
    width: 100%;
    margin:0;
    box-sizing: border-box;
}

.login label{
    margin: 10px 0  ;
    width: 100%;
    float: left;
}

.login input{
    margin: 5px 0;
}

.login button.signup-btn{
    width:100%;
    margin: 15px 0 0;
}

 .dashboard-content-wrap {
    display: flex;
    padding-top: 70px;
}

.left-panel {
    display: flex;
    width: 223px;
    top: 70px;
    background-color: #456d9f;
    position: fixed;
    height: calc(100vh - 70px);
}

.left-navigation {
    width: 100%; 
}
 
.sideNav {
    margin: 0;
    list-style-type: none;
    padding: 20px 0;
    .sideNav-list {
        display: block;
    }
    .sideNav-list-link {
        color: #fff;
        padding: 12px 25px 12px 30px;
        display: block;
    }
}

.right-panel {
    display: flex;
    padding-left: 223px;
    width: 100%;
}
.dashboard-main-content {
    width: 100%;
    padding: 30px;
}

.calendar-header {
    position: relative;
    padding: 20px;
    border-radius: 2px 2px 0 0;
    background-color: #0277bd;
    display: flex;
    flex-direction: column;
    justify-content: center;
    border: 1px solid #0277bd;
}

.calendar-year {
    color: hsla(0,0%,100%,.42);
    font-weight: 700;
    font-size: 15px;
}

.calendar-day {
    font-size: 25px;
    line-height: 100%;
    color: #fff;
}

ul.calendar-actions {
    position: absolute;
    right: 20px;
    z-index: 2;
    top: 20px;
    list-style: none;
    li {
        float: left;
        margin-left: 15px;
        a {
            color: #fff;
        }
    }
}
.calendar-wrap {
    width: 65%;
}
.calendar-body {
    border: 1px solid #f2f2f2;;
}
.table-hdrow {
    display: flex;
    .table-cell{
        font-weight: 500;
        padding: 8px;
        font-size: 14px;
        border-right: 1px solid #f2f2f2;
        &:last-child {
            border-right: none;
        }
    }
}
.table-row {
    display: flex;
    min-height: 130px;
    &:last-child .table-cell{
        border-bottom: none;
    }
}

.table-cell {
    max-width: 150px;
    text-align: center;
    border: none;
    border-right: 1px solid #f2f2f2;
    margin-right: -1px;
    margin-top: -1px;
    padding: 10px;
    width: 100%;
    border-bottom: 1px solid #f2f2f2;
    &:last-child {
        border-right: none;
    }
}

.hero-section {
    width: 100%;
    height: 100%;    
    background: linear-gradient(150deg,#53f 15%,#05d5ff 70%,#a6ffcb 94%);
    opacity: 1;
    min-height: 700px;
 }
 
 .space-box {
    margin: 80px 0 0 !important;
    text-align: center;
    color: darken($whiteColor, 40%);
 }
 
 .ui.menu:not(.vertical) .item {
    flex-basis: auto !important;
 }

 .error-message {
     color: #FF0000
 }

 .input-box {
     margin: 0 0 15px;
 }

 .signup-btn {
     margin: 0 0 10px;
 }

 .hero-title {
    font-size: 34px;
    line-height: 1.3;    
    margin-bottom: 24px;    
    font-weight: 400;    
    margin-left: 23%;    
    margin-right: 20%;
    color: #d9fcff;
    overflow: hidden;    
    letter-spacing: -.5px;   
    margin:250px 0 0;
 }
 .hero-content {
    font-size: 17px;
    color: #d9fcff;    
    font-weight: 400;    
    line-height: 26px;    
    margin-left: 20%;    
    margin-right: 20%;
 }

 .hero-content-section {
     margin: 0 auto;
 }

 .btn-style{
    -webkit-box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
    box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);    
    -webkit-transition: all .15s ease;    
    transition: all .15s ease;
 }
 .ui.secondary.menu {
     margin: 0;
 }

 .widget-content {
     margin: 75px 0 !important;
     h3 {
         color: #555;
         font-weight: 400;
         line-height: 1.3;
         letter-spacing: -.01em;
         font-size: 20px;
         margin-bottom: 13px;         
     }
     p {
        margin-bottom: 0;
        font-size: 16px;    
        color: #555;
        font-weight: 400;        
        line-height: 24px;        
     }
 }

 

